needed files to herokuapp

--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
     "name": "startbootstrap-grayscale",
     "version": "5.0.6",
     "scripts": {
-        "start": "gulp watch"
+        "start": "gulp watch",
+        "start": "node server.js"
     },
     "description": "A grayscale one page HTML theme for Bootstrap.",
     "keywords": [
